--- a/css/title.css
+++ b/css/title.css
@@ -16,7 +16,11 @@
     justify-content: flex-end;
     align-items: center;
     padding-right: 40px;
-    padding-right: 40px;
+}
+
+.header_title > a.main-btn_title {
+    background-color: white;
+    color: #43218b;
 }
 
 .header_title > a {
@@ -51,7 +55,7 @@
 }
 
 .buttons_title {
-    max-width: 590px;
+    max-width: 580px;
     margin: auto;
     display: flex;
     justify-content: space-between;
@@ -60,5 +64,18 @@
 
 .single-btn_title {
     display: block;
-    margin: 10px auto 0;
+    margin: 20px auto 0;
+    background-color: rgba(0, 0, 0, 0);
+    border: solid 1px #ffffff;
+    color: white;
+}
+
+.left-btn_title {
+    background-color: #4fa0ff;
+    color: white;
+}
+
+.right-btn_title {
+    background-color: #ff9f00;
+    color: white;
 }
