--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import "./title.css";
+@import "./description.css";
 
 body {
     margin: 0;
@@ -24,12 +25,13 @@ button {
     border: none;
     box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.1);
     border-radius: 10px;
+    cursor: pointer;
 }
 
 .delimiter {
     width: 40px;
     height: 10px;
-    background: url('../images/delimiter.svg') no-repeat center;
+    background: url("../images/delimiter.svg") no-repeat center;
     background-size: 40px 10px;
 }
 
