--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,10 @@ body {
     padding: 0;
 }
 
+div {
+    box-sizing: border-box;
+}
+
 a {
     text-decoration: none;
     color: black;
@@ -33,6 +37,13 @@ button {
     height: 10px;
     background: url("../images/delimiter.svg") no-repeat center;
     background-size: 40px 10px;
+}
+
+.big-delimiter {
+    width: 80px;
+    height: 20px;
+    background: url("../images/big-delimiter.svg") no-repeat center;
+    background-size: 80px 20px;
 }
 
 .content_center {
