--- a/css/description.css
+++ b/css/description.css
@@ -115,6 +115,6 @@
     height: 300px;
     width: 100%;
     background: url('../images/image_description.png') no-repeat center;
-    background-size: contain;
+    background-size: cover;
     margin: 44px auto 0;
 }
