--- a/css/title.css
+++ b/css/title.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 760px;
     background-size: 1180px 1180px;
-    background: #43218b url("../images/ground_title.svg") no-repeat 50% 100px;
+    background: #43218b url("../images/title/background.svg") no-repeat 50% 100px;
 }
 
 .header_title {
@@ -10,7 +10,7 @@
     height: 60px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     margin: auto;
-    background: url("../images/logo.svg") no-repeat left;
+    background: url("../images/title/logo.svg") no-repeat left;
     background-size: 48px 20px;
     display: flex;
     justify-content: flex-end;
