--- a/css/for-authors.css
+++ b/css/for-authors.css
@@ -11,7 +11,7 @@
     top: 57px;
     width: 270px;
     height: 670px;
-    background: url("../images/background-for-authors.png") no-repeat center;
+    background: url("../images/for-authors/background.png") no-repeat center;
     background-size: 270px 670px;
 }
 
@@ -49,7 +49,7 @@
     width: 80px;
     height: 80px;
     border-radius: 40px;
-    background: #f5f5f5 url('../images/cup-orange.svg') no-repeat center;
+    background: #f5f5f5 url('../images/for-authors/cup-orange.svg') no-repeat center;
 }
 
 .body-card_for-authors {
@@ -97,7 +97,7 @@
 }
 
 .center-card_for-authors .inner-circle_for-author {
-    background: #f5f5f5 url('../images/cup-purple.svg') no-repeat center;
+    background: #f5f5f5 url('../images/for-authors/cup-purple.svg') no-repeat center;
 }
 
 .center-card_for-authors .substrate-card_for-authors {
@@ -109,7 +109,7 @@
 }
 
 .right-card_for-authors .inner-circle_for-author {
-    background: #f5f5f5 url('../images/cup-blue.svg') no-repeat center;
+    background: #f5f5f5 url('../images/for-authors/cup-blue.svg') no-repeat center;
 }
 
 .right-card_for-authors .substrate-card_for-authors {
