--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,7 @@ button {
     letter-spacing: normal;
     text-align: center;
     color: #1f094e;
-    margin: 55px auto;
+    margin: 55px auto 0;
     text-transform: uppercase;
     max-width: 1000px;
     width: 90%;
