--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@
 @import "./ledger.css";
 @import "./business.css";
 @import "./team.css";
+@import "./footer.css";
 
 * {
     margin: 0;
@@ -66,4 +67,10 @@ button {
     text-transform: uppercase;
     max-width: 1000px;
     width: 90%;
+}
+
+.work_body {
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
 }
