--- a/css/title.css
+++ b/css/title.css
@@ -1,8 +1,7 @@
 .container_title {
-    width: 100%;
-    height: 760px;
     background-size: 1180px 1180px;
-    background: #43218b url("../images/title/background.svg") no-repeat 50% 100px;
+    background: #43218b url("../images/title/background.svg") no-repeat 50% 160px;
+    padding-bottom: 260px;
 }
 
 .header_title {
@@ -49,7 +48,7 @@
 }
 
 .delimiter_title {
-    margin: 50px auto;
+    margin: 53px auto 50px;
 }
 
 .buttons_title {
