--- a/css/key-features.css
+++ b/css/key-features.css
@@ -26,3 +26,12 @@
     line-height: 60px;
     color: white;
 }
+
+.right-block_key-features > button {
+    background-color: #ffffff;
+    font-size: 14px;
+    font-weight: bold;
+    line-height: normal;
+    text-align: center;
+    color: #000000;
+}
