--- a/css/for-authors.css
+++ b/css/for-authors.css
@@ -25,7 +25,6 @@
 .card_for-authors {
     position: relative;
     width: 360px;
-    height: 490px;
     margin: 64px 10px 0;
 }
 
@@ -50,12 +49,11 @@
 .body-card_for-authors {
     position: relative;
     width: 100%;
-    height: 430px;
-    margin: -50px 0 0;
+    margin: -50px 0 10px;
     z-index: 1;
     border-radius: 20px;
     background-color: #ffffff;
-    padding: 97px 40px 0;
+    padding: 97px 40px 30px;
 }
 
 .title-card_for-authors {
@@ -109,4 +107,37 @@
 
 .right-card_for-authors .substrate-card_for-authors {
     left: 40px;
+}
+
+@media (max-width: 1199px) {
+    .container_for-authors {
+        padding: 60px 0;
+    }
+
+    .background_for-authors {
+        display: none;
+    }
+
+    .card_for-authors {
+        width: 100%;
+        margin: 20px 0 0;
+    }
+
+    .title-card_for-authors {
+        width: 100%;
+    }
+
+    .card_for-authors .substrate-card_for-authors {
+        width: 568px;
+        left: calc(50% - 284px);
+    }
+
+    .center-card_for-authors .circle_for-author, .right-card_for-authors .circle_for-author{
+        display: none;
+    }
+
+    .center-card_for-authors .body-card_for-authors, .right-card_for-authors .body-card_for-authors {
+        padding: 34px 40px 30px;
+        margin: 20px auto 10px;
+    }
 }
