added css for business on middle screen

--- a/css/business.css
+++ b/css/business.css
@@ -3,3 +3,11 @@
     padding-top: 70px;
     margin: 0 auto 70px;
 }
+
+
+@media (max-width: 1199px) {
+    .container_business {
+        padding-top: 0;
+    }
+
+}
