--- a/css/team.css
+++ b/css/team.css
@@ -68,3 +68,13 @@
     margin: -90px auto 0;
     z-index: 1;
 }
+
+@media (max-width: 1199px) {
+    .container_team {
+        padding: 60px 0 100px;
+    }
+
+    .body_team.work_body {
+        margin: 54px auto 0;
+    }
+}
