--- a/css/key-features.css
+++ b/css/key-features.css
@@ -10,11 +10,13 @@
 
 .left-block_key-features {
     background: #43218b url("../images/key-features/background-left.svg") no-repeat left;
+    background-size: 100% 100%;
     padding-top: 100px;
 }
 
 .right-block_key-features {
     background: #43218b url("../images/key-features/background-right.svg") no-repeat right;
+    background-size: 100% 100%;
     padding-top: 100px;
     padding-left: 180px;
 }
