--- a/css/description.css
+++ b/css/description.css
@@ -1,6 +1,5 @@
 .container_description {
     position: relative;
-    min-height: 680px;
     width: 100%;
 }
 
@@ -84,7 +83,6 @@
 .description_description {
     margin: 40px auto 0;
     max-width: 800px;
-    width: 80%;
     text-align: center;
     font-size: 18px;
     font-weight: 300;
@@ -112,5 +110,30 @@
 
     .container_description .block_title {
         padding: 0 50px;
+    }
+}
+
+@media (max-width: 699px) {
+    .work_body.body_description {
+        margin: -110px auto 0;
+        min-width: 300px;
+        padding: 91px 0 29px;
+    }
+
+    .container_description .block_title {
+        margin: 37px 0 0;
+        padding: 0 10px;
+        font-size: 18px;
+    }
+
+    .description_description {
+        margin: 31px 20px 0;
+        font-size: 16px;
+    }
+
+    .image_description {
+        width: 100vw;
+        background-size: cover;
+        margin: 20px 0 0 calc(-50vw + 150px);
     }
 }
