add css for authors on small screen

--- a/css/for-authors.css
+++ b/css/for-authors.css
@@ -143,3 +143,48 @@
         height: calc(100% - 30px);
     }
 }
+
+@media (max-width: 699px) {
+    .container_for-authors {
+        padding: 50px 0;
+    }
+
+    .container_for-authors .block_title {
+        margin-top: 47px;
+        width: 260px;
+    }
+
+    .cards_for-author.work_body {
+        margin-top: 36px;
+    }
+
+    .card_for-authors {
+        margin-top: 10px;
+    }
+
+    .body-card_for-authors {
+        padding: 90px 20px 37px;
+    }
+
+    .title-card_for-authors {
+        font-size: 18px;
+    }
+
+    .description-card_for-authors {
+        margin-top: 33px;
+        font-size: 16px;
+        line-height: 1.25;
+    }
+
+    .container_for-authors .substrate-card_for-authors {
+        width: 260px;
+        left: calc(50% - 130px);
+    }
+
+    .center-card_for-authors .body-card_for-authors, .right-card_for-authors .body-card_for-authors {
+        padding: 37px 20px;
+        margin: 10px auto 10px;
+        height: calc(100% - 20px);
+    }
+
+}
