--- a/css/for-customers.css
+++ b/css/for-customers.css
@@ -107,3 +107,39 @@
     }
 
 }
+
+@media (max-width: 699px) {
+
+    .container_for-customers {
+        padding-bottom: 16px;
+    }
+
+    .container_for-customers .block_title {
+        width: 280px;
+    }
+
+    .cards_for-customers.work_body {
+        margin-top: 27px;
+    }
+
+    .card_for-customers {
+        margin-top: 20px;
+        padding: 37px 20px 36px;
+    }
+
+    .title-card_for-customers {
+        font-size: 18px;
+    }
+
+    .description-card_for-customers {
+        font-size: 16px;
+        line-height: 1.25;
+        margin-top: 33px;
+    }
+
+    .substrate-card_for-customers {
+        width: 260px;
+        left: calc(50% - 130px);
+        bottom: -10px;
+    }
+}
