--- a/css/for-authors.css
+++ b/css/for-authors.css
@@ -59,7 +59,7 @@
 
 .title-card_for-authors {
     width: 280px;
-    font-size: 24px;
+    font: 24px Rubik-Regular;
     font-weight: bold;
     line-height: 1.25;
     text-align: center;
@@ -69,8 +69,7 @@
 
 .description-card_for-authors {
     margin-top: 21px;
-    font-size: 20px;
-    font-weight: 300;
+    font: 20px Rubik-Light;
     line-height: 1.5;
     text-align: center;
     color: #333347;
