--- a/css/for-customers.css
+++ b/css/for-customers.css
@@ -35,8 +35,7 @@
 }
 
 .title-card_for-customers {
-    font-size: 24px;
-    font-weight: bold;
+    font: 24px Rubik-Bold;
     line-height: 1.25;
     text-align: center;
     text-transform: uppercase;
@@ -45,8 +44,7 @@
 
 .description-card_for-customers {
     margin-top: 20px;
-    font-size: 20px;
-    font-weight: 300;
+    font: 20px Rubik-Light;
     line-height: 1.5;
     text-align: center;
     color: #ffffff;
