--- a/css/ledger.css
+++ b/css/ledger.css
@@ -50,8 +50,7 @@
     position: absolute;
     left: 20px;
     top: -17px;
-    font-size: 18px;
-    font-weight: bold;
+    font: 18px Rubik-Bold;
     line-height: 34px;
     color: #1f094e;
 }
@@ -64,8 +63,7 @@
     padding: 25px 20px;
     margin-bottom: 10px;
     text-transform: uppercase;
-    font-size: 16px;
-    font-weight: 500;
+    font: 16px Rubik-Medium;
     line-height: 1.25;
     color: #333347;
 }
