--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Rubik-Regular, serif;
 }
 
 a {
@@ -58,8 +59,7 @@ button {
 }
 
 .block_title {
-    font-size: 32px;
-    font-weight: bold;
+    font: 32px Rubik-Regular;
     line-height: 1.06;
     letter-spacing: normal;
     text-align: center;
@@ -90,4 +90,28 @@ button {
         font-size: 18px;
         margin: 47px auto 0;
     }
+}
+
+@font-face {
+    font-family: Rubik-Regular;
+    font-weight: normal;
+    src: local("Rubik Regular"), local("Rubik-Regular"), url('../fonts/Rubik-Regular.woff') format("woff"), url('../fonts/Rubik-Regular.woff2') format("woff2")
+}
+
+@font-face {
+    font-family: Rubik-Bold;
+    font-weight: bold;
+    src: local("Rubik Bold"), local("Rubik-Bold"), url('../fonts/Rubik-Bold.woff') format("woff"), url('../fonts/Rubik-Bold.woff') format("woff2")
+}
+
+@font-face {
+    font-family: Rubik-Light;
+    font-weight: 300;
+    src: local("Rubik Light"), local("Rubik-Light"), url('../fonts/Rubik-Light.woff') format("woff"), url('../fonts/Rubik-Light.woff') format("woff2")
+}
+
+@font-face {
+    font-family: Rubik-Medium;
+    font-weight: 500;
+    src: local("Rubik Medium"), local("Rubik-Medium"), url('../fonts/Rubik-Medium.woff') format("woff"), url('../fonts/Rubik-Medium.woff') format("woff2")
 }
