--- a/css/team.css
+++ b/css/team.css
@@ -43,8 +43,7 @@
 
 .full-name_team {
     height: 30px;
-    font-size: 24px;
-    font-weight: bold;
+    font: 24px Rubik-Bold;
     line-height: 1.25;
     text-align: center;
     color: #333347;
@@ -52,8 +51,7 @@
 
 .position_team {
     height: 30px;
-    font-size: 20px;
-    font-weight: 300;
+    font: 20px Rubik-Light;
     line-height: 1.5;
     text-align: center;
     color: #333347;
